--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
     "http-proxy-middleware": "^2.0.6",
-    "jquery": "^3.6.0",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
@@ -13,6 +16,7 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.1",
     "rimraf": "^3.0.2",
     "web-vitals": "^2.1.4",
