--- a/database/WMU.Elearning.Database.csproj
+++ b/database/WMU.Elearning.Database.csproj
@@ -18,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Reinforced.Typings" Version="1.6.1" />
   </ItemGroup>
 
 </Project>
