--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
       # Install Client Packages
       - name: NPM Install
         run: |
-          npm install --prefix client --omit=dev
+          npm install --prefix client
           
       # Build Client
       - name: Build Client
