--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@testing-library/jest-dom": "^5.16.5",
     "framer-motion": "^7.6.4",
     "hamburger-react": "^2.5.0",
     "http-proxy-middleware": "^2.0.6",
